--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gooroom-icon-themes (4.0.0+grm4u1) unstable; urgency=medium
+
+  [ jongkyung.woo ]
+  * [3152319f] Rebuild on gooroom-4.0
+
+  [ cjheo ]
+  * [06d79ad3] Add new icon theme for Gooroom-4.0
+
+ -- Gooroom Autobuilder <jenkins@gooroom.kr>  Fri, 08 Mar 2024 13:26:15 +0900
+
 gooroom-icon-themes (3.1.0+grm3u1) unstable; urgency=medium
 
   [ subin.kim ]
